# Vicinator

./: .gitignore  .travis.yml  README.md  README.md.save  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
vicinator/: vicinator.py  vicinator.py.save.1  vicinator.py.save.2
vicinator/tests/: test_vicinator.py  vicinator.ogtable.pickle
